<resources>
    <string name="app_name">PexelsApp</string>
    <string name="search_hint">Search</string>
    <string name="download_btn_text">Download</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="error_message">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="explore">Explore</string>
    <string name="no_results">No results found</string>
    <string name="no_bookmarks">You haven\'t saved anything yet</string>
    <string name="image_not_found">Image not found</string>
    <string name="no_popular_queries">No popular queries was found</string>
    <string name="failed_popular_queries">Failed to get popular queries</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>