<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/bookmarksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/bookmarks"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/loadingProgressBarBookmarks"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@id/bookmarksTextView"
        android:background="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/red" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerViewBookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmarksTextView"
        android:layout_marginHorizontal="@dimen/screen_content_horizontal_margin"
        android:layout_marginTop="38dp"
        tools:listitem="@layout/image_with_author_item" />

    <RelativeLayout
        android:id="@+id/noResultsStubBookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/screen_content_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/noResultsTxtViewBookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_bookmarks"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/exploreTextViewBookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noResultsTxtViewBookmarks"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/explore"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp"/>
    </RelativeLayout>

</RelativeLayout>