<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topBar_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="@dimen/screen_content_horizontal_margin">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_btn_shape"
            android:src="@drawable/back_icon"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/authorTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarDetails"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@id/topBar_Details"
        android:background="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/red" />

    <ScrollView
        android:id="@+id/imageScrollViewDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar_Details"
        android:layout_marginHorizontal="@dimen/screen_content_horizontal_margin"
        android:layout_marginTop="30dp"
        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imgViewDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true">

            </ImageView>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/noImageFoundStub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/screen_content_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/noResultsTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_not_found"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/exploreTextViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/noResultsTxtView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/explore"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imageButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/screen_content_horizontal_margin"
        android:paddingVertical="24dp">

        <Button
            android:id="@+id/downloadBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/download_btn_height"
            android:background="@drawable/download_btn_background_shape"
            android:drawableLeft="@drawable/download_round_btn_shape"
            android:paddingVertical="0dp"
            android:paddingLeft="0dp"
            android:text="@string/download_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/gray" />

        <ImageButton
            android:id="@+id/addToBookmarksBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bookmark_round_btn_shape"
            android:src="@drawable/bookmarks_icon" />
    </RelativeLayout>

</RelativeLayout>